--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tanish Gift of Gratitude</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #ffeef8;
-      color: #5e004f;
+      background-color: #ffe6f0;
+      color: #4d0039;
     }
     header {
-      background-color: #ffb6c1;
+      background-color: #ff99cc;
       padding: 2rem;
       text-align: center;
       color: white;
@@ -37,67 +37,52 @@
       margin-top: 2rem;
     }
     .cta a {
-      background-color: #d36c8b;
+      background-color: #cc6699;
       color: white;
       padding: 0.8rem 1.5rem;
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
     }
-    .gallery, .products, .contact, .instagram {
-      margin-top: 3rem;
-    }
-    .gallery h3, .products h3, .contact h3, .instagram h3 {
-      color: #b30059;
-    }
-    .gallery-grid, .products-grid {
+    .products {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1rem;
-      margin-top: 1rem;
+      gap: 2rem;
+      margin: 3rem 0;
     }
-    .gallery-grid img, .products-grid img {
-      width: 100%;
-      border-radius: 12px;
-    }
-    .product-card {
+    .product {
       background: white;
       border-radius: 12px;
       padding: 1rem;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    .product-card h4 {
-      margin: 0.5rem 0;
+    .product img {
+      max-width: 100%;
+      border-radius: 8px;
     }
-    .product-card a {
-      display: inline-block;
-      margin-top: 0.5rem;
+    footer {
+      background-color: #ff99cc;
       color: white;
-      background-color: #d36c8b;
-      padding: 0.5rem 1rem;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
     }
-    .contact form {
-      max-width: 500px;
-      margin: auto;
+    .contact-form {
+      margin-top: 2rem;
       text-align: left;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
     }
-    .contact label {
-      display: block;
-      margin-bottom: 0.3rem;
-      margin-top: 1rem;
-    }
-    .contact input, .contact textarea {
+    .contact-form input, .contact-form textarea {
       width: 100%;
-      padding: 0.5rem;
-      border-radius: 6px;
+      padding: 0.6rem;
+      margin: 0.5rem 0;
       border: 1px solid #ccc;
+      border-radius: 6px;
     }
-    .contact button {
-      margin-top: 1rem;
-      background-color: #d36c8b;
+    .contact-form button {
+      background-color: #cc6699;
       color: white;
       padding: 0.7rem 1.5rem;
       border: none;
@@ -105,119 +90,84 @@
       font-weight: bold;
       cursor: pointer;
     }
-    .instagram iframe {
-      width: 100%;
-      max-width: 400px;
-      height: 480px;
-      border: none;
-    }
     .whatsapp-float {
       position: fixed;
-      width: 60px;
-      height: 60px;
       bottom: 20px;
       right: 20px;
-      background-color: #25D366;
+      background: #25d366;
       color: white;
-      border-radius: 50px;
-      text-align: center;
-      font-size: 30px;
-      box-shadow: 2px 2px 5px #999;
-      z-index: 100;
-    }
-    .whatsapp-float i {
-      margin-top: 15px;
-    }
-    footer {
-      background-color: #ffb6c1;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      position: relative;
-      bottom: 0;
-      width: 100%;
+      border-radius: 50%;
+      padding: 15px;
+      font-size: 24px;
+      z-index: 1000;
+      text-decoration: none;
     }
   </style>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 <body>
   <header>
     <img src="logo.png" alt="Tanish Gift of Gratitude Logo" />
     <h1>Tanish Gift of Gratitude</h1>
-    <p>Gratitude, Handcrafted with Love.</p>
+    <p>Gratitude, Handcrafted with Love</p>
     <nav>
       <a href="#">Home</a>
-      <a href="#gallery">Gallery</a>
       <a href="#products">Products</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <main>
-    <h2>Welcome to Our World of Handcrafted Love</h2>
-    <p>We create personalized photo frames, thoughtful gifts, and custom craft items that turn your memories into keepsakes.</p>
+    <h2>Welcome to Our World of Handcrafted Gifts</h2>
+    <p>Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
+    
     <div class="cta">
-      <a href="https://instagram.com/tanishcrafthouse" target="_blank">Visit Our Instagram</a>
+      <a href="https://instagram.com/giftof_gratitude" target="_blank">Follow Us on Instagram</a>
     </div>
 
-    <section id="gallery" class="gallery">
-      <h3>Our Gallery</h3>
-      <div class="gallery-grid">
-        <img src="gallery1.jpg" alt="Craft Image 1" />
-        <img src="gallery2.jpg" alt="Craft Image 2" />
-        <img src="gallery3.jpg" alt="Craft Image 3" />
-        <img src="gallery4.jpg" alt="Craft Image 4" />
-      </div>
-    </section>
-
     <section id="products" class="products">
-      <h3>Featured Products</h3>
-      <div class="products-grid">
-        <div class="product-card">
-          <img src="product1.jpg" alt="Product 1" />
-          <h4>Customized Frame</h4>
-          <p>A unique frame tailored with your special moments.</p>
-          <a href="#">Order Now</a>
-        </div>
-        <div class="product-card">
-          <img src="product2.jpg" alt="Product 2" />
-          <h4>Gift Box</h4>
-          <p>Handcrafted box with beautiful surprise elements.</p>
-          <a href="#">Order Now</a>
-        </div>
+      <div class="product">
+        <img src="sample1.jpg" alt="Custom Photo Frame" />
+        <h3>Custom Photo Frame</h3>
+        <p>A handcrafted photo frame made to preserve your memories beautifully.</p>
+        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
+      </div>
+      <div class="product">
+        <img src="sample2.jpg" alt="Mini Scrapbook" />
+        <h3>Mini Scrapbook</h3>
+        <p>A pocket-sized book filled with love, perfect for gifting.</p>
+        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
+      </div>
+      <div class="product">
+        <img src="sample3.jpg" alt="Name Plate Frame" />
+        <h3>Name Plate Frame</h3>
+        <p>Elegant name plate designs with floral or wooden themes.</p>
+        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
+      </div>
+      <div class="product">
+        <img src="sample4.jpg" alt="Anniversary Gift Frame" />
+        <h3>Anniversary Gift Frame</h3>
+        <p>Celebrate love with a personalized frame for special occasions.</p>
+        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
     </section>
 
-  
-    <section id="contact" class="contact">
-      <h3>Contact Us</h3>
-      <form action="https://formspree.io/f/tanishgratitude@gmail.com" method="POST">
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" required />
+    <section id="contact">
+      <h2>Contact Indraja Balla</h2>
+      <p>Email: <a href="mailto:indrajapolasa@gmail.com">indrajapolasa@gmail.com</a></p>
 
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required />
-
-        <label for="message">Message</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
-
+      <form action="https://formsubmit.co/indrajapolasa@gmail.com" method="POST" class="contact-form">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
         <button type="submit">Send Message</button>
       </form>
     </section>
-
-    <section class="instagram">
-      <h3>Our Instagram Feed</h3>
-      <iframe src="https://widgets.sociablekit.com/instagram-feed/iframe/21185345" scrolling="no" allowtransparency="true"></iframe>
-    </section>
   </main>
 
-  <a href="https://wa.me/919999999999?text=Hi%20Tanish%20Gift%20of%20Gratitude!%20I%20would%20like%20to%20place%20an%20order." class="whatsapp-float" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-  </a>
+  <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">💬</a>
 
   <footer>
     <p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p>
   </footer>
 </body>
 </html>
-<!-- Trigger rebuild -->
