--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tanish Gift of Gratitude</title>
+
+  <!-- Google Font for header -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
@@ -18,7 +22,13 @@
       color: white;
     }
     header img {
-      height: 80px;
+      height: 120px;
+      margin-bottom: 10px;
+    }
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 3rem;
+      margin: 0.2rem 0;
     }
     nav {
       margin-top: 1rem;
