--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       padding: 2rem;
       text-align: center;
       color: white;
+      position: relative;
     }
-    header img {
+    header img.logo {
       height: 120px;
       margin-bottom: 10px;
     }
@@ -29,6 +30,13 @@
       font-family: 'Playfair Display', serif;
       font-size: 3rem;
       margin: 0.2rem 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+    }
+    .gif-icon {
+      height: 50px;
     }
     nav {
       margin-top: 1rem;
@@ -116,8 +124,12 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Tanish Gift of Gratitude Logo" />
-    <h1>Tanish Gift of Gratitude</h1>
+    <img src="logo.png" alt="Tanish Gift of Gratitude Logo" class="logo" />
+    <h1>
+      <img src="https://media.giphy.com/media/3o6ZsUaztpxH5YyKf2/giphy.gif" alt="baby gif" class="gif-icon" />
+      Tanish Gift of Gratitude
+      <img src="https://media.giphy.com/media/3o6ZsUaztpxH5YyKf2/giphy.gif" alt="baby gif" class="gif-icon" />
+    </h1>
     <p>Gratitude, Handcrafted with Love</p>
     <nav>
       <a href="#">Home</a>
