--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <!-- Google Font for header -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
+  <!-- FontAwesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <style>
     body {
       margin: 0;
@@ -20,6 +23,9 @@
       padding: 2rem;
       text-align: center;
       color: white;
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
     header img {
       height: 120px;
@@ -56,7 +62,7 @@
     }
     .products {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2rem;
       margin: 3rem 0;
     }
@@ -69,6 +75,38 @@
     .product img {
       max-width: 100%;
       border-radius: 8px;
+    }
+    .product h3 {
+      margin-top: 0.8rem;
+    }
+    .stars {
+      color: gold;
+      font-size: 1.2rem;
+    }
+    .product-actions {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .cart-btn, .order-btn {
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      font-weight: bold;
+      text-decoration: none;
+      color: white;
+    }
+    .cart-btn {
+      background-color: #ff66b2;
+    }
+    .cart-btn:hover {
+      background-color: #e655a3;
+    }
+    .order-btn {
+      background-color: #25d366;
+    }
+    .order-btn:hover {
+      background-color: #1ebd5a;
     }
     footer {
       background-color: #ff99cc;
@@ -100,6 +138,9 @@
       font-weight: bold;
       cursor: pointer;
     }
+    .contact-form button:hover {
+      background-color: #b35985;
+    }
     .whatsapp-float {
       position: fixed;
       bottom: 20px;
@@ -112,72 +153,15 @@
       z-index: 1000;
       text-decoration: none;
     }
-  </style>
-</head>
-<body>
-  <header>
-    <img src="logo.png" alt="Tanish Gift of Gratitude Logo" />
-    <h1>Tanish Gift of Gratitude</h1>
-    <p>Gratitude, Handcrafted with Love</p>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#products">Products</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <main>
-    <h2>Welcome to Our World of Handcrafted Gifts</h2>
-    <p>Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
-    
-    <div class="cta">
-      <a href="https://instagram.com/giftof_gratitude" target="_blank">Follow Us on Instagram</a>
-    </div>
-
-    <section id="products" class="products">
-      <div class="product">
-        <img src="sample1.jpg" alt="Custom Photo Frame" />
-        <h3>Custom Photo Frame</h3>
-        <p>A handcrafted photo frame made to preserve your memories beautifully.</p>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
-      </div>
-      <div class="product">
-        <img src="sample2.jpg" alt="Mini Scrapbook" />
-        <h3>Mini Scrapbook</h3>
-        <p>A pocket-sized book filled with love, perfect for gifting.</p>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
-      </div>
-      <div class="product">
-        <img src="sample3.jpg" alt="Name Plate Frame" />
-        <h3>Name Plate Frame</h3>
-        <p>Elegant name plate designs with floral or wooden themes.</p>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
-      </div>
-      <div class="product">
-        <img src="sample4.jpg" alt="Anniversary Gift Frame" />
-        <h3>Anniversary Gift Frame</h3>
-        <p>Celebrate love with a personalized frame for special occasions.</p>
-        <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact Indraja Balla</h2>
-      <p>Email: <a href="mailto:indrajapolasa@gmail.com">indrajapolasa@gmail.com</a></p>
-
-      <form action="https://formsubmit.co/indrajapolasa@gmail.com" method="POST" class="contact-form">
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
-  </main>
-
-  <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">💬</a>
-
-  <footer>
-    <p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+    .cart-icon {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      background-color: #ff66b2;
+      color: white;
+      padding: 10px 15px;
+      border-radius: 50px;
+      font-weight: bold;
+      z-index: 1000;
+      cursor: pointer;
+      font-size: 18px
