--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- Google Font for header -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
   <style>
     body {
       margin: 0;
@@ -19,9 +20,6 @@
       padding: 2rem;
       text-align: center;
       color: white;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
     }
     header img {
       height: 120px;
@@ -43,10 +41,10 @@
     }
     main {
       padding: 2rem;
+      text-align: center;
     }
     .cta {
       margin-top: 2rem;
-      text-align: center;
     }
     .cta a {
       background-color: #cc6699;
@@ -56,69 +54,21 @@
       text-decoration: none;
       font-weight: bold;
     }
-    .category-tabs {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-bottom: 2rem;
-    }
-    .category-tabs button {
-      padding: 0.5rem 1rem;
-      border: none;
-      background-color: #cc6699;
-      color: white;
-      border-radius: 8px;
-      cursor: pointer;
-    }
     .products {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 2rem;
+      margin: 3rem 0;
     }
     .product {
       background: white;
       border-radius: 12px;
       padding: 1rem;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      transition: transform 0.3s ease;
-    }
-    .product:hover {
-      transform: scale(1.05);
     }
     .product img {
       max-width: 100%;
       border-radius: 8px;
-    }
-    .cart-icon {
-      position: fixed;
-      bottom: 80px;
-      right: 20px;
-      background: #cc6699;
-      color: white;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 20px;
-      z-index: 1000;
-      cursor: pointer;
-    }
-    .cart-count {
-      position: absolute;
-      top: -5px;
-      right: -5px;
-      background: white;
-      color: #cc6699;
-      border-radius: 50%;
-      font-size: 14px;
-      width: 20px;
-      height: 20px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
     footer {
       background-color: #ff99cc;
@@ -177,40 +127,33 @@
   </header>
 
   <main>
-    <h2 style="text-align: center;">Welcome to Our World of Handcrafted Gifts</h2>
-    <p style="text-align: center;">Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
-
+    <h2>Welcome to Our World of Handcrafted Gifts</h2>
+    <p>Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
+    
     <div class="cta">
       <a href="https://instagram.com/giftof_gratitude" target="_blank">Follow Us on Instagram</a>
     </div>
 
-    <div class="category-tabs">
-      <button onclick="filterCategory('all')">All</button>
-      <button onclick="filterCategory('frames')">Frames</button>
-      <button onclick="filterCategory('scrapbooks')">Scrapbooks</button>
-      <button onclick="filterCategory('nameplates')">Name Plates</button>
-    </div>
-
     <section id="products" class="products">
-      <div class="product" data-category="frames">
+      <div class="product">
         <img src="sample1.jpg" alt="Custom Photo Frame" />
         <h3>Custom Photo Frame</h3>
         <p>A handcrafted photo frame made to preserve your memories beautifully.</p>
         <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
-      <div class="product" data-category="scrapbooks">
+      <div class="product">
         <img src="sample2.jpg" alt="Mini Scrapbook" />
         <h3>Mini Scrapbook</h3>
         <p>A pocket-sized book filled with love, perfect for gifting.</p>
         <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
-      <div class="product" data-category="nameplates">
+      <div class="product">
         <img src="sample3.jpg" alt="Name Plate Frame" />
         <h3>Name Plate Frame</h3>
         <p>Elegant name plate designs with floral or wooden themes.</p>
         <a href="https://wa.me/919999999999" target="_blank">Order Now</a>
       </div>
-      <div class="product" data-category="frames">
+      <div class="product">
         <img src="sample4.jpg" alt="Anniversary Gift Frame" />
         <h3>Anniversary Gift Frame</h3>
         <p>Celebrate love with a personalized frame for special occasions.</p>
@@ -231,34 +174,10 @@
     </section>
   </main>
 
-  <div class="cart-icon">
-    🛒<div class="cart-count" id="cartCount">0</div>
-  </div>
-
   <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">💬</a>
 
   <footer>
     <p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p>
   </footer>
-
-  <script>
-    let cartCount = 0;
-    document.querySelectorAll('.product a').forEach(btn => {
-      btn.addEventListener('click', () => {
-        cartCount++;
-        document.getElementById('cartCount').textContent = cartCount;
-      });
-    });
-
-    function filterCategory(category) {
-      document.querySelectorAll('.product').forEach(product => {
-        if (category === 'all' || product.dataset.category === category) {
-          product.style.display = 'block';
-        } else {
-          product.style.display = 'none';
-        }
-      });
-    }
-  </script>
 </body>
 </html>
